--- a/src/Core/OrderApp.Application/OrderApp.Application.csproj
+++ b/src/Core/OrderApp.Application/OrderApp.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CurrencyRate.Domain\OrderApp.Domain.csproj" />
+    <ProjectReference Include="..\OrderApp.Domain\OrderApp.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
