--- a/src/Presentation/OrderApp.API/appsettings.json
+++ b/src/Presentation/OrderApp.API/appsettings.json
@@ -7,11 +7,22 @@
   },
   "AllowedHosts": "*",
 
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=CurrencyRateDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  //},
-
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=ECommerceDb;user=root;password=Admin12*"
+  },
+
+  "RabbitMqSystemModel": {
+    "HostName": "localhost",
+    "UserName": "admin",
+    "Password": "123456",
+    "QueueName": "SendMail8",
+    "Exchange": ""
+  },
+
+  "SmtpSystemModel": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "MailAdress": "deneme@deneme.com",
+    "Password": "pasword"
   }
 }
