Added response the Id of the order record

--- a/src/Presentation/OrderApp.API/appsettings.json
+++ b/src/Presentation/OrderApp.API/appsettings.json
@@ -15,7 +15,7 @@
     "HostName": "localhost",
     "UserName": "admin",
     "Password": "123456",
-    "QueueName": "SendMail8",
+    "QueueName": "SendMail",
     "Exchange": ""
   },
 
