--- a/src/Infrastructure/OrderApp.Infrastructure/OrderApp.Infrastructure.csproj
+++ b/src/Infrastructure/OrderApp.Infrastructure/OrderApp.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
   </ItemGroup>
 
   <ItemGroup>
