--- a/src/Presentation/OrderApp.API/appsettings.json
+++ b/src/Presentation/OrderApp.API/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=ECommerceDb;user=root;password=Admin12*"
+    "DefaultConnection": "server=localhost;port=3306;database=ECommerceDb;user=root;password=Admin12*",
+    "Redis": "localhost:6379"
   },
 
   "RabbitMqSystemModel": {
