--- a/src/Presentation/OrderApp.API/appsettings.json
+++ b/src/Presentation/OrderApp.API/appsettings.json
@@ -15,7 +15,7 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=ECommerceDb;user=root;password=Admin12*",
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379,abortConnect=false"
   },
 
   "RabbitMqSystemModel": {
